--- a/GratkaScraper/GratkaScraper.csproj
+++ b/GratkaScraper/GratkaScraper.csproj
@@ -7,9 +7,10 @@
     <Nullable>enable</Nullable>    
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.CosmosDB" Version="3.0.9" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.1.0" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0-preview1" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.8.0-preview3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseScraper\BaseScraper.csproj" />
