--- a/BaseScraperTests/BaseScraperTests.csproj
+++ b/BaseScraperTests/BaseScraperTests.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0-preview-20220612-01" />
-    <PackageReference Include="Moq.Contrib.HttpClient" Version="1.3.0" />
+    <PackageReference Include="NSubstitute" Version="4.0.0-rc1" />
     <PackageReference Include="xunit" Version="2.4.2-pre.12" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
